--- a/thi.html
+++ b/thi.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
 </head>
-<body
+<body>
+
 </body>
-<script src="thi2.js"></script>
+<script src="bai1.js"></script>
+<script src="bai2.js"></script>
+<script src="bai3.js"></script>
+<script src="bai4.js"></script>
 </html>
